Added sort-by select box on shop page and implemented "Outlet Context" passing props from layout to children elements

--- a/spa/src/index.css
+++ b/spa/src/index.css
@@ -394,13 +394,13 @@ nav {
   cursor: pointer;
 }
 
-#resetCart {
+.clickText {
   cursor: pointer;
   color: #0fbcf9;
   font-family: "Josefin Sans", sans-serif;
 }
 
-#resetCart:hover {
+.clickText:hover {
   color: #3c40c6;
   text-decoration: underline;
 }
